<resources>
    <string name="app_name">ChatApp</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome">Welcome</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_lists">User Lists</string>
</resources>